CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(Travis)
SET(TRAVIS_VERSION_MAJOR 0)
SET(TRAVIS_VERSION_MINOR 1)
SET(TRAVIS_VERSION_PATCH 0)

INCLUDE(cmake/benchmarking.cmake NO_POLICY_SCOPE)
INCLUDE(cmake/testing.cmake NO_POLICY_SCOPE)

# TODO(mwhittaker): Change compiler flags based on Debug or Release.
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    SET(CMAKE_CXX_FLAGS_COMMON
        "-std=c++14 \
         -O0 \
         -Wall \
         -Wextra \
         -Werror \
         -pedantic \
         -g \
         -fsanitize=address \
         -fsanitize=undefined")
else ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    SET(CMAKE_CXX_FLAGS_COMMON
        "-std=c++14 \
         -O0 \
         -Wall \
         -Wextra \
         -Werror \
         -pedantic \
         -g")
endif()
SET(CMAKE_CXX_FLAGS_DEBUG
    "${CMAKE_CXX_FLAGS_DEBUG} \
     ${CMAKE_CXX_FLAGS_COMMON}")
SET(CMAKE_CXX_FLAGS_RELEASE
    "${CMAKE_CXX_FLAGS_RELEASE} \
     ${CMAKE_CXX_FLAGS_COMMON}")

ADD_SUBDIRECTORY(vendor/googlebenchmark)
ADD_SUBDIRECTORY(vendor/googlelog)
ADD_SUBDIRECTORY(vendor/googletest)
ADD_SUBDIRECTORY(vendor/zeromq)
ADD_SUBDIRECTORY(vendor/zeromqcpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${GBENCH_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GMOCK_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ZEROMQCPP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ZEROMQ_INCLUDE_DIRS})

LINK_DIRECTORIES(${GLOG_LINK_DIRS})
LINK_DIRECTORIES(${ZEROMQ_LINK_DIRS})

ENABLE_TESTING()
ADD_SUBDIRECTORY(reverse)
ADD_SUBDIRECTORY(service)
ADD_SUBDIRECTORY(zmq_util)
